--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,96 @@ html,
 body {
 	margin: 0;
 	padding: 0;
+
+	font-family: "Roboto", Arial, sans-serif; //задаем стили для body
 	font-size: 16px;
-	font-family: "Roboto", "Arial", "sans-serif";
 	line-height: 24px;
+	font-weight: 400;
 	color: #283136;
+	
+	background-color: #ffffff;
 }
+
+a {
+	text-decoration: none; //отменяем у ссылок подчеркивание
+}
+
+.main-header {	
+	background-color: #eeeeee;
+	background-image: url("../img/pattern_light.jpg");
+	background-position: top center;
+	background-repeat: no-repeat;
+}
+
+.main-navigation {
+	font-size: 16px;
+	line-height: 30px;
+	color: #000000;
+	text-transform: uppercase;
+}
+
+.site-navigation,
+.user-navigation {
+	list-style: none;
+}
+
+.site-navigation a,
+.user-navigation a {
+	color: #000000;
+}
+
+.site-navigation a:hover,
+.user-navigation a:hover {
+	color: #fb565a;
+}
+
+.site-navigation a:focus,
+.user-navigation a:focus {
+	color: rgba(0,0,0,0.3);
+}
+
+.slider-item {
+	text-align: left;
+}
+
+.slider-item h2 {
+	font-size: 55px;
+	line-height: 55px;
+	color: #000000;
+}
+
+.services {
+	border-bottom: 2px solid #eeeeee;
+}
+
+.services-list h3 {
+	font-size: 24px;
+	line-height: 30px;
+	font-weight: bold;
+	color: #000000;
+	text-transform: uppercase;
+}
+
+
+.site {
+	background-image: url("../img/illustration1.jpg");
+	background-position: top center;
+	background-repeat: no-repeat;
+}
+
+.application {
+	background-image: url("../img/illustration2.jpg");
+	background-position: top center;
+	background-repeat: no-repeat;
+}
+
+.present {
+	background-image: url("../img/illustration3.jpg");
+	background-position: top center;
+	background-repeat: no-repeat;
+}
+
+
 
 .page-title {
 	font-size: 55px;
@@ -14,20 +99,3 @@ body {
 	color: #000000;
 }
 
-.slider-title {
-	font-size: 55px;
-	line-height: 55px;
-	color: #000000;
-}
-
-.services-subtitle {
-	font-size: 24px;
-	line-height: 30px;
-	color: #000000;
-	text-transform: uppercase;
-}
-
-.rules-subtitle {
-	color: #000000;
-	text-transform: uppercase;
-}
