--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,7 @@ a {
 .page-title h1 {
 	font-size: 55px;
 	line-height: 55px;
+	font-weight: medium;
 	color: #000000;
 }
 
@@ -207,9 +208,69 @@ a {
 .filter legend {
 	font-size: 18px;
 	line-height: 30px;
+	font-weight: bold;
+}
+
+.filter ul {
+	list-style: none;
+	font-size: 16px;
+	font-weight: regular;
+	line-height: 20px;
+}
+
+.filter-input {
+	color: #283136;
+}
+
+.filter-input:hover + label {
+	color: #000000;
+}
+
+.filter-input:disabled + label {
+	color: rgba(40,49,54,0.3);
+}
+
+.sorting b {
+	font-size: 18px;
+	line-height: 18px;
+	font-weight: bold:
+	color: #000000;
+}
+
+.sorting a {
+	font-size: 14px;
+	line-height: 18px;
+	font-weight: regular;
+	color: rgba(0,0,0,0.3);
+}
+
+.sorting a:hover {
+	color: rgba(0,0,0,0.6);
+}
+
+.sorting a:focus,
+.sorting a:active {
+	color: #000000;
 }
 
 
+
+
+
+
+
+
+
+
+
+
+
+.footer-contacts b {
+	font-size: 18px;
+	line-height: 30px;
+	font-weight: bold;
+	color: #000000;
+}
 
 .footer-social {
 	text-align: left;
@@ -269,6 +330,12 @@ a {
 	font-size: 45px;
 	line-height: 45px;
 	font-weight: medium;
+}
+
+.write-us-item label {
+	font-size: 16px;
+	line-height: 18px;
+	font-weight: bold;
 }
 
 .write-us-item input,
