--- a/css/style.css
+++ b/css/style.css
@@ -417,17 +417,70 @@ a {
 /* ------- Сеточные стили ------ */
 
 
+.container {
+	width: 1160px;
+	margin: 0 auto;
+	padding: 0 20px;
+}
 
 .main-header {
+	margin-bottom: 80px;
+	
+	background-color: #eeeeee;
 	
 	/* Временно для сетки */
-	min-height: 545px;
+	min-height: 500px;
 	outline: 1px solid red;
+	background-color: transparent;
+
 }
 
 .main-navigation {
+	display: flex;
+	flex-direction: row;
+	align-items: flex-start;
+	margin-top: 45px;
+	
 	/* Временно для сетки */
-	min-height: 545px;
+	min-height: 500px;
 	background-color: transparent;
-	outline: 1px solid #000;
 }
+
+.main-header-logo {
+	order: 0;
+	
+	width: 300px;
+	height: 65px;
+	
+	/* Временно для сетки */
+	/*display: block;*/
+	outline: 1px solid green;
+}
+
+
+
+.site-navigation {
+	width: 540px;
+	margin: 0;
+	padding: 0;
+	
+	list-style: none;
+	
+	/* Временно для сетки */
+	min-height: 65px;
+	outline: 1px solid green;
+}
+
+.user-navigation {
+	width: 200px;
+	margin: 0;
+	padding: 0;
+	margin-left: auto;
+	
+	list-style: none;
+	
+	/* Временно для сетки */
+	min-height: 65px;
+	outline: 1px solid green;
+}
+
