--- a/css/style.css
+++ b/css/style.css
@@ -425,7 +425,6 @@ a {
 	
 	/* Временно для сетки */
 	min-height: 545px;
-	outline: 1px solid red;
 
 
 }
@@ -445,8 +444,7 @@ a {
 	margin: 0 auto;
 	padding: 0 0;
 	
-	/* Временно для сетки */
-	outline: 1px solid grey;
+
 }
 
 
@@ -460,7 +458,7 @@ a {
 	
 	
 	/* Временно для сетки */
-	outline: 1px solid red;
+
 	min-height: 65px;
 }
 
@@ -470,8 +468,6 @@ a {
 	margin: 0;
 	padding: 0;
 	
-	/* Временно для сетки */
-	outline: 1px solid red;
 }	
 	
 .site-navigation {
@@ -479,7 +475,7 @@ a {
 	
 	/* Временно для сетки */
 	min-height: 65px;
-	outline: 1px solid red;
+
 }
 
 .user-navigation {
@@ -488,14 +484,14 @@ a {
 	
 	/* Временно для сетки */
 	min-height: 65px;
-	outline: 1px solid red;
+
 }
 
 .slider {
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
-	outline: 1px solid green;
+
 }
 
 .slider-item {
@@ -503,12 +499,13 @@ a {
 	
 	/* Временно для сетки */
 	min-height: 430px;
-	outline: 1px solid red;
+
 }
 
 .services {
 	width: 1100px;
-	margin-bottom: 80px;
+	padding-bottom: 80px;
+	border-bottom: 2px solid #eeeeee;
 }
 
 .services-list {
@@ -524,4 +521,39 @@ a {
 .services-item {
 	width: 300px;
 	text-align: left;
+}
+
+.index-columns {
+	display: flex;
+	justify-content: space-between;
+	padding-top: 45px;
+	padding-bottom: 50px;
+
+}
+
+.rules {
+	width: 660px;
+}
+
+.partners-list {
+	display: flex;
+	justify-content: space-between;
+}
+
+.social {
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+	align-items: center;
+}
+
+.footer-social ul {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	width: 300px;
+}
+
+.footer-social-slogan {
+	padding-left: 100px;
 }
