--- a/css/style.css
+++ b/css/style.css
@@ -430,10 +430,7 @@ a {
 
 }
 
-.main-header .inner {
-	/* Временно для сетки */
-	min-height: 65px;
-}
+
 
 .main-navigation {
 	display: flex;
@@ -464,7 +461,7 @@ a {
 	width: 660px;
 	
 	/* Временно для сетки */
-	min-height: 65px;
+	/* min-height: 65px; */
 
 }
 
@@ -490,6 +487,36 @@ a {
 	/* Временно для сетки */
 	min-height: 430px;
 
+}
+
+main.container {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+main.container h1 {
+	width: 100%;
+}
+
+.filters {
+	width: 260px;
+}
+
+.catalog {
+	display: flex;
+	flex-direction: column;
+	width: 760px;
+	margin-left: auto;
+}
+
+.catalog-list {
+	display: flex;
+	flex-wrap: wrap;
+
+}
+
+.catalog-item {
+	width: 360px;
 }
 
 .services {
@@ -540,8 +567,11 @@ a {
 .footer-social ul {
 	display: flex;
 	flex-direction: row;
-	justify-content: space-between;
 	width: 300px;
+}
+
+.footer-social li {
+	margin-right: 13px;
 }
 
 .footer-social-slogan {
