--- a/css/style.css
+++ b/css/style.css
@@ -512,11 +512,13 @@ main.container h1 {
 .catalog-list {
 	display: flex;
 	flex-wrap: wrap;
-
+	padding: 0;
+	margin: 0;
 }
 
 .catalog-item {
 	width: 360px;
+	margin-right: 20px;
 }
 
 .services {
