--- a/css/style.css
+++ b/css/style.css
@@ -582,6 +582,7 @@ main h1 {
 	display: flex;
 	flex-direction: row;
 	width: 300px;
+	padding: 0;
 }
 
 .footer-social li {
@@ -629,6 +630,7 @@ main h1 {
 }
 
 .footer-map img {
+	display: block;
 	margin-left: auto;
 	margin-right: auto;
 }
