--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
 	margin: 0;
 	padding: 0;
 
-	font-family: "Roboto", Arial, sans-serif; //задаем стили для body
+	font-family: "Roboto", Arial, sans-serif;
 	font-size: 16px;
 	line-height: 24px;
 	font-weight: 400;
@@ -13,14 +13,35 @@ body {
 }
 
 a {
-	text-decoration: none; //отменяем у ссылок подчеркивание
+	text-decoration: none;
+}
+
+.visually-hidden {
+	position: absolute;
+
+	width: 1px;
+	height: 1px;
+	margin: -1px;
+	border: 0;
+	padding: 0;
+
+	white-space: nowrap;
+
+	clip-path: inset(100%);
+	clip: rect(0 0 0 0);
+	overflow: hidden;
 }
 
 .main-header {
+	margin-bottom: 80px;
+	padding-top: 50px;
 	background-color: #eeeeee;
 }
 
 .main-navigation {
+	display: flex;
+	flex-direction: row;
+	align-items: flex-start;
 	font-size: 16px;
 	line-height: 30px;
 	font-weight: 500;
@@ -31,6 +52,17 @@ a {
 .site-navigation,
 .user-navigation {
 	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+.site-navigation {
+	width: 660px;
+}
+
+.user-navigation {
+	width: 160px;
+	margin-left: auto;
 }
 
 .site-navigation-current a {
@@ -54,6 +86,14 @@ a {
 	color: rgba(0,0,0,0.3);
 }
 
+.container {
+	width: 1160px;
+	margin: 0 auto;
+	padding: 0 20px;
+	
+
+}
+
 .container h1 {
 	font-size: 55px;
 	line-height: 55px;
@@ -61,6 +101,17 @@ a {
 	color: #000000;
 	background-color: #eeeeee;
 	text-align: center;
+}
+
+.slider {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+}
+
+.slider-item2,
+.slider-item3 {
+	display: none;
 }
 
 .slider-item h2 {
@@ -94,7 +145,26 @@ a {
 	box-shadow: 0 3px 0 rgba(0,1,1,0.1) inset;
 }
 
+.inner {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+main h1 {
+	font-size: 55px;
+	line-height: 55px;
+	font-weight: 500;
+	color: #000000;
+	background-color: #eeeeee;
+	text-align: center;
+	width: 100%;
+}
+
 .index-columns {
+	display: flex;
+	justify-content: space-between;
+	padding-top: 45px;
+	padding-bottom: 50px;
 	border-bottom: 2px solid #eeeeee;
 }
 
@@ -108,6 +178,27 @@ a {
 .index-columns h4 {
 	color: #000000;
 	text-transform: uppercase;
+}
+
+.services {
+	width: 1100px;
+	padding-bottom: 80px;
+	border-bottom: 2px solid #eeeeee;
+}
+
+.services-list {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	margin: 0;
+	padding: 0;
+
+	list-style: none;
+}
+
+.services-item {
+	width: 300px;
+	text-align: left;
 }
 
 .services-list h3 {
@@ -165,6 +256,10 @@ a {
 	color: rgba(255,255,255,0.3);
 }
 
+.rules {
+	width: 660px;
+}
+
 .rules-work  {
 	list-style: none;
 }
@@ -184,6 +279,8 @@ a {
 
 .partners-list {
 	list-style: none;
+	display: flex;
+	justify-content: space-between;
 }
 
 .partners-item a {
@@ -198,6 +295,10 @@ a {
 
 .partners-item a:active {
 	opacity: 0.1;
+}
+
+.filters {
+	width: 260px;
 }
 
 .filter fieldset {
@@ -260,8 +361,28 @@ a {
 	color: #000000;
 }
 
+.catalog {
+	display: flex;
+	flex-direction: column;
+	width: 760px;
+	margin-left: auto;
+}
+
+.catalog-item {
+	width: 360px;
+}
+
+.catalog-item:nth-child(odd) {
+	margin-right: 20px;
+}
+
 .catalog-list {
 	list-style: none;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	padding: 0;
+	margin: 0;
 }
 
 .catalog-buy-item {
@@ -284,6 +405,14 @@ a {
 
 .pagination-list {
 	list-style: none;
+	display: flex;
+	flex-direction: row;
+	width: 460px;
+	padding: 60px 0;
+}
+
+.pagination-item {
+	margin-right: 12px;
 }
 
 .pagination-item li {
@@ -332,6 +461,13 @@ a {
 	list-style: none;
 }
 
+.social {
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+	align-items: center;
+}
+
 .social-button {
 	display: inline-block;
 	background-color: #e1e1e1;
@@ -350,7 +486,25 @@ a {
 	background-color: #d7373b;
 }
 
+.footer-map img {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.footer-social ul {
+	display: flex;
+	flex-direction: row;
+	width: 300px;
+	padding: 0;
+}
+
+.footer-social li {
+	margin-right: 13px;
+}
+
 .footer-social-slogan {
+	padding-left: 100px;
 	text-align: left;
 }
 
@@ -373,6 +527,7 @@ a {
 }
 
 .modal {
+	display: none;
 	color: #000000;
 	background-color: #ffffff;
 	box-shadow: 0 20px 0 40px #ffffff;  //сомневаюсь, нужно будет потом проверить
@@ -414,223 +569,4 @@ a {
 .write-us-item input:focus,
 .write-us-item textarea:focus {
 	border-color: #444444;
-}
-
-
-/* ------- Сеточные стили ------ */
-
-
-
-.main-header {
-	margin-bottom: 80px;
-	padding-top: 50px;
-	background-color: #eeeeee;
-	
-	/* Временно для сетки */
-	/*min-height: 545px; убрала из-за внутреннего страницы - меньше высота хедера */
-
-
-}
-
-
-
-.main-navigation {
-	display: flex;
-	flex-direction: row;
-	align-items: flex-start;
-	
-	/* Временно для сетки */
-}
-
-.container {
-	width: 1160px;
-	margin: 0 auto;
-	padding: 0 20px;
-	
-
-}
-
-
-.site-navigation,
-.user-navigation {
-	list-style: none;
-	margin: 0;
-	padding: 0;
-	
-}	
-	
-.site-navigation {
-	width: 660px;
-	
-	/* Временно для сетки */
-	/* min-height: 65px; */
-
-}
-
-.user-navigation {
-	width: 160px;
-	margin-left: auto;
-	
-	/* Временно для сетки */
-	min-height: 65px;
-
-}
-
-.slider {
-	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
-
-}
-
-.slider-item {
-
-	
-	/* Временно для сетки */
-	min-height: 430px;
-
-}
-
-.inner {
-	display: flex;
-	flex-wrap: wrap;
-}
-
-main h1 {
-	font-size: 55px;
-	line-height: 55px;
-	font-weight: 500;
-	color: #000000;
-	background-color: #eeeeee;
-	text-align: center;
-	width: 100%;
-}
-
-.filters {
-	width: 260px;
-}
-
-.catalog {
-	display: flex;
-	flex-direction: column;
-	width: 760px;
-	margin-left: auto;
-}
-
-.catalog-list {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
-	padding: 0;
-	margin: 0;
-}
-
-.catalog-item {
-	width: 360px;
-}
-
-.catalog-item:nth-child(odd) {
-	margin-right: 20px;
-}
-
-.services {
-	width: 1100px;
-	padding-bottom: 80px;
-	border-bottom: 2px solid #eeeeee;
-}
-
-.services-list {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	margin: 0;
-	padding: 0;
-
-	list-style: none;
-}
-
-.services-item {
-	width: 300px;
-	text-align: left;
-}
-
-.index-columns {
-	display: flex;
-	justify-content: space-between;
-	padding-top: 45px;
-	padding-bottom: 50px;
-
-}
-
-.rules {
-	width: 660px;
-}
-
-.partners-list {
-	display: flex;
-	justify-content: space-between;
-}
-
-.social {
-	display: flex;
-	flex-direction: row;
-	justify-content: flex-start;
-	align-items: center;
-}
-
-.footer-social ul {
-	display: flex;
-	flex-direction: row;
-	width: 300px;
-	padding: 0;
-}
-
-.footer-social li {
-	margin-right: 13px;
-}
-
-.footer-social-slogan {
-	padding-left: 100px;
-}
-
-.slider-item2,
-.slider-item3 {
-	display: none;
-}
-
-.modal {
-	display: none;
-}
-
-.visually-hidden {
-	position: absolute;
-
-	width: 1px;
-	height: 1px;
-	margin: -1px;
-	border: 0;
-	padding: 0;
-
-	white-space: nowrap;
-
-	clip-path: inset(100%);
-	clip: rect(0 0 0 0);
-	overflow: hidden;
-}
-
-.pagination-list {
-	display: flex;
-	flex-direction: row;
-	width: 460px;
-	padding: 60px 0;
-}
-
-.pagination-item {
-	margin-right: 12px;
-}
-
-.footer-map img {
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
 }
