--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,14 @@ a {
 	text-decoration: none;
 }
 
-.visually-hidden {
+img {
+	max-width: 100%;
+	height: auto;
+}
+
+.visually-hidden:not(:focus):not(:active),
+input[type="checkbox"].visually-hidden,
+input[type="radio"].visually-hidden {
 	position: absolute;
 
 	width: 1px;
@@ -57,11 +64,18 @@ a {
 }
 
 .site-navigation {
+	display: flex;
+	flex-wrap: wrap;
 	width: 660px;
+	padding-left: 176px;
+	
+	background: rgba(234, 255, 45, 0.2);
+	box-shadow: inset 0 0 0 2px rgb(234, 255, 45);
 }
 
 .user-navigation {
-	width: 160px;
+	display: flex;
+	max-width: 160px;
 	margin-left: auto;
 }
 
@@ -71,6 +85,10 @@ a {
 
 .site-navigation a,
 .user-navigation a {
+	display: block;
+	padding: 26px 24px;
+
+	vertical-align: middle;
 	color: #000000;
 }
 
@@ -84,6 +102,29 @@ a {
 .site-navigation a[href]:active,
 .user-navigation a[href]:active {
 	color: rgba(0,0,0,0.3);
+}
+
+.user-navigation .basket {
+	position: relative;
+	padding-left: 90px;
+
+	  background: rgba(234, 255, 45, 0.2);
+  box-shadow: inset 0 0 0 2px rgb(234, 255, 45);
+}
+
+.basket::before {
+  content: "";
+
+  position: absolute;
+  top: 33px;
+  left: 43px;
+  
+  width: 15px;
+  height: 15px;
+  
+  background-image: url("../img/cart-icon.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
 }
 
 .container {
@@ -103,21 +144,101 @@ a {
 	text-align: center;
 }
 
-.slider {
-	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
+.slider{
+    position:relative;
+    width:1160px;
+    height:414px;
+    margin:0 auto;
 }
-
-.slider-item2,
-.slider-item3 {
-	display: none;
+.slider input[type=radio] {
+    position:absolute;
+    opacity:0;
 }
-
-.slider-item h2 {
-	font-size: 55px;
-	line-height: 55px;
-	color: #000000;
+.slider-controls{
+    position:absolute;
+    bottom:95px;
+    left:50%;
+    width:200px;
+    height:10px;
+    margin-left:-100px;
+    text-align:center;
+    z-index:1000;
+}
+.slider-controls label{
+    display:inline-block;
+    width:4px;
+    height:4px;
+    margin:0 3px;
+    background:white;
+    border:3px solid white;
+    vertical-align:top;
+    border-radius:50%;
+    cursor:pointer;
+}
+#btn-1:checked ~ .slider-controls label[for="btn-1"],
+#btn-2:checked ~ .slider-controls label[for="btn-2"],
+#btn-3:checked ~ .slider-controls label[for="btn-3"] { 
+    background:#c1c1c1;
+}
+.slide{
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    overflow:hidden;
+}
+.slide-text{
+    width:560px;
+    padding:60px 0;
+    color:#283136;
+}
+.slide-title{
+    font-size: 55px;
+    line-height: 55px;
+    font-weight: bold;
+    color: #000000;
+	padding-bottom: 10px;
+}
+.slide .btn{
+    display:block;
+    width:240px;
+    padding:14px 0;
+    margin-top:40px;
+    font-size:16px;
+    color:white;
+    text-transform:uppercase;
+    text-align:center;
+    text-decoration:none;
+    background:#fb565a;
+    border-radius:3px;
+}
+.slide:nth-child(1){
+    background-image:url("../img/nerds_index_slide1.png");
+    background-repeat:no-repeat;
+    background-position:100% -15px;
+}
+.slide:nth-child(2){
+    background-image:url("../img/nerds_index_slide2.png");
+    background-repeat:no-repeat;
+    background-position:100% 10px;
+}
+.slide:nth-child(3){
+    background-image:url("../img/nerds_index_slide3.png");
+    background-repeat:no-repeat;
+    background-position:100% 0;
+}
+.slide{
+    display:none;
+}
+#btn-1:checked ~ .slides .slide:nth-child(1) { 
+    display: block;
+}
+#btn-2:checked ~ .slides .slide:nth-child(2) { 
+    display: block;
+}
+#btn-3:checked ~ .slides .slide:nth-child(3) { 
+    display: block;
 }
 
 .button {
@@ -201,13 +322,21 @@ main h1 {
 	text-align: left;
 }
 
-.services-list h3 {
-	padding-top: 145px;
+.services-item h3 {
+	margin: 0;
+	padding-top: 170px;
+	padding-bottom: 15px;
 	font-size: 24px;
 	line-height: 30px;
 	font-weight: bold;
 	color: #000000;
 	text-transform: uppercase;
+}
+
+.services-item p {
+	margin: 0;
+	padding: 0;
+	padding-bottom: 35px;
 }
 
 .site {
@@ -220,6 +349,20 @@ main h1 {
 	background-image: url("../img/illustration2.jpg");
 	background-position: top center;
 	background-repeat: no-repeat;
+}
+
+.application .button,
+.present .button,
+.site .button {
+	display: block;
+    width: 160px;
+    padding:15px 0;
+    font-size:16px;
+    color:white;
+    text-transform:uppercase;
+    text-align:center;
+    text-decoration:none;
+    border-radius:3px;
 }
 
 .application .button {
