--- a/css/style.css
+++ b/css/style.css
@@ -68,9 +68,6 @@ input[type="radio"].visually-hidden {
 	flex-wrap: wrap;
 	width: 660px;
 	padding-left: 176px;
-	
-	background: rgba(234, 255, 45, 0.2);
-	box-shadow: inset 0 0 0 2px rgb(234, 255, 45);
 }
 
 .user-navigation {
@@ -107,9 +104,6 @@ input[type="radio"].visually-hidden {
 .user-navigation .basket {
 	position: relative;
 	padding-left: 90px;
-
-	  background: rgba(234, 255, 45, 0.2);
-  box-shadow: inset 0 0 0 2px rgb(234, 255, 45);
 }
 
 .basket::before {
@@ -284,33 +278,20 @@ main h1 {
 .index-columns {
 	display: flex;
 	justify-content: space-between;
-	padding-top: 45px;
-	padding-bottom: 50px;
 	border-bottom: 2px solid #eeeeee;
-}
-
-.index-columns b {
-	font-size: 45px;
-	line-height: 45px;
-	font-weight: 500;
-	color: #000000;
-}
-
-.index-columns h4 {
-	color: #000000;
-	text-transform: uppercase;
 }
 
 .services {
-	width: 1100px;
+	width: 1160px;
 	padding-bottom: 80px;
 	border-bottom: 2px solid #eeeeee;
+
 }
 
 .services-list {
 	display: flex;
 	flex-direction: row;
-	justify-content: space-between;
+	justify-content: flex-start;
 	margin: 0;
 	padding: 0;
 
@@ -320,6 +301,10 @@ main h1 {
 .services-item {
 	width: 300px;
 	text-align: left;
+}
+
+.services-item:not(.site) {
+	margin-left: 100px;
 }
 
 .services-item h3 {
@@ -401,16 +386,61 @@ main h1 {
 
 .rules {
 	width: 660px;
+	padding: 0;
+	margin-bottom: 45px;
+}
+
+.rules b {
+	display: inline-block;
+	font-size: 45px;
+	line-height: 45px;
+	font-weight: 500;
+	color: #000000;
+	margin: 0;
+	padding-top: 75px;
+	padding-bottom: 15px;
 }
 
 .rules-work  {
 	list-style: none;
+	padding: 0;
+	margin: 0;
+	margin-top: 25px;
+}
+
+.rules-work li {
+	padding-bottom: 25px;
+}
+
+.rules p {
+	padding-bottom: 10px;
+}
+
+.rules h4,
+.statistic h4 {
+	color: #000000;
+	text-transform: uppercase;
+	padding: 0;
+	margin-top: 30px;
+}
+
+.statistic {
+	width: 360px;
+	padding-top: 40px;
+	margin-bottom: 45px;
+}
+
+.statistic h4 {
+	text-align: center;
 }
 
 .statistic-information td {
 	font-size: 45px;
 	font-weight: bold;
 	color: #000000;
+	padding-top: 25px;
+	padding-right: 20px;
+	margin: 0;
 }
 
 .statistic-information th {
@@ -418,12 +448,31 @@ main h1 {
 	line-height: 18px;
 	font-weight: 400;
 	color: #283136;
+	text-align: left;
+	margin: 0;
+	padding: 0;
+	padding-top: 27px;
+	
+}
+
+.partners {
+	margin: 0;
+	padding: 0;
+	height: 180px;
+	width: 1160px;
+}
+
+.index-columns .partners {
+	padding: 0;
 }
 
 .partners-list {
 	list-style: none;
 	display: flex;
 	justify-content: space-between;
+	
+	margin: 0;
+	padding: 0;
 }
 
 .partners-item a {
@@ -598,10 +647,25 @@ main h1 {
 
 .footer-social {
 	text-align: left;
+	width: 260px;
 }
 
+
 .footer-social ul {
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
+	justify-content: felx-start;
+	align-items: flex-end;
+	width: 300px;
 	list-style: none;
+	padding: 0;
+	padding-top: 70px; 
+	margin: 0 auto;
+}
+
+.footer-social li {
+	margin-right: 13px;
 }
 
 .social {
@@ -612,7 +676,9 @@ main h1 {
 }
 
 .social-button {
-	display: inline-block;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	background-color: #e1e1e1;
 	color: #ffffff;
 	height: 78px;
@@ -633,29 +699,29 @@ main h1 {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
+	margin-top: 80px;
 }
 
-.footer-social ul {
-	display: flex;
-	flex-direction: row;
-	width: 300px;
-	padding: 0;
-}
-
-.footer-social li {
-	margin-right: 13px;
+.footer-contacts {
+	position: absolute;
 }
 
 .footer-social-slogan {
-	padding-left: 100px;
+	width: 760px;
+	padding-left: 140px;
 	text-align: left;
+	
+	  background: rgba(234, 255, 45, 0.2);
+  box-shadow: inset 0 0 0 1px rgb(234, 255, 45);
 }
 
 .footer-social-slogan b {
+	display: block;
 	font-size: 36px;
 	line-height: 36px;
-	font-weight: 400;
+	font-weight: 700;
 	color: #000000;
+	margin-top: 70px;
 }
 
 .footer-social-slogan p {
