--- a/css/style.css
+++ b/css/style.css
@@ -158,6 +158,7 @@ input[type="radio"].visually-hidden {
     text-align:center;
     z-index:1000;
 }
+
 .slider-controls label{
     display:inline-block;
     width:4px;
@@ -168,6 +169,9 @@ input[type="radio"].visually-hidden {
     vertical-align:top;
     border-radius:50%;
     cursor:pointer;
+	background-image: url("../img/radio_out_slider.png");
+	background-repeat: no-repeat;
+	background-position: 0 0;
 }
 #btn-1:checked ~ .slider-controls label[for="btn-1"],
 #btn-2:checked ~ .slider-controls label[for="btn-2"],
@@ -220,7 +224,7 @@ input[type="radio"].visually-hidden {
 .slide:nth-child(3){
     background-image:url("../img/nerds_index_slide3.png");
     background-repeat:no-repeat;
-    background-position:100% 0;
+    background-position:99% 0;
 }
 .slide{
     display:none;
@@ -409,7 +413,24 @@ main h1 {
 }
 
 .rules-work li {
+	position: relative;
+	padding-left: 37px;
 	padding-bottom: 25px;
+}
+
+.rules-work li::before {
+  content: "";
+
+  position: absolute;
+  top: 10px;
+  left: 0;
+  
+  width: 25px;
+  height: 2px;
+  
+  background-image: url("../img/bullit.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
 }
 
 .rules p {
