--- a/css/style.css
+++ b/css/style.css
@@ -283,20 +283,25 @@ input[type="radio"].visually-hidden {
 	flex-wrap: wrap;
 }
 
-main.grey {
-	padding:0;
-	margin: 0;
-}
 
 .grey {
+	background-color: #eeeeee;
+	text-align: center;
+	margin: 0;
+	padding: 0;
+	height: 220px;
+	width: 100%;
+	outline: 1px solid red;
+}
+
+.grey h1 {
 	font-size: 55px;
 	line-height: 55px;
 	font-weight: 500;
 	color: #000000;
-	background-color: #eeeeee;
-	text-align: center;
-	padding: 100px 0;
-	width: 100%;
+	padding: 0;
+	margin: 0;
+	padding-top: 60px;
 }
 
 .index-columns {
