--- a/css/style.css
+++ b/css/style.css
@@ -968,9 +968,10 @@ input[type="radio"].visually-hidden {
 	font-size: 16px;
 	line-height: 18px;
 	font-weight: 500;
-	height: 50px;
-	min-width: 25px;
+	height: 44px;
+	min-width: 19px;
 	color: #000000;
+	border: 3px solid #eeeeee;
 	background-color: #eeeeee;
 	border-radius: 3px;
 	padding: 0 12.5px;
@@ -980,18 +981,20 @@ input[type="radio"].visually-hidden {
 	text-transform: uppercase;
 }
 
-.pagination-item a:hover,
-.pagination-item a:focus {
+
+.pagination-list a:hover,
+.pagination-list a:focus {
 	background-color: #dfdfdf;
 }
 
-.pagination-item a:active {
+.pagination-list a:active {
 	background-color: #d5d5d5;
 	box-shadow: 0 3px 0 rgba(0,1,1,0.1) inset;
 }
 
 .pagination-item-current a {
-
+	background-color: #fff;
+	border: 3px solid #dbdbdb;
 }
 
 .pagination-item-current a:hover {
