--- a/css/style.css
+++ b/css/style.css
@@ -981,15 +981,16 @@ input[type="radio"].visually-hidden {
 }
 
 
-.pagination-list a:hover,
-.pagination-list a:focus {
+.pagination-list a:hover[href],
+.pagination-list a:focus[href] {
 	background-color: #dfdfdf;
 }
 
-.pagination-list a:active {
+.pagination-list a:active[href] {
 	background-color: #d5d5d5;
 	box-shadow: 0 3px 0 rgba(0,1,1,0.1) inset;
 }
+
 
 .pagination-item-current a {
 	background-color: #fff;
@@ -998,6 +999,7 @@ input[type="radio"].visually-hidden {
 	border: 3px solid #dbdbdb;
 }
 
+/*
 .pagination-item-current a:hover,
 .pagination-item-current a:focus {
 	background-color: #fff;
@@ -1012,6 +1014,7 @@ input[type="radio"].visually-hidden {
 	min-width: 19px;
 	border: 3px solid #dbdbdb;
 }
+*/
 
 .footer-contacts b {
 	font-size: 18px;
